# films-dataset-converter

./: .gitignore  README.md  films-converter.cabal  launch.sh  stack.yaml  upload.sh
app/: Color.hs  Feature.hs  FeatureTable.hs  Main.hs  Util.hs
