name:                films-converter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/films-converter#readme
license:             BSD3
license-file:        LICENSE
author:              Martoon
maintainer:          example@example.com
copyright:           2017 <martoon.hsk@gmail.com>
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable converter
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Color
                       Feature
                       FeatureTable
                       Util
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       attoparsec
                     , ansi-terminal
                     , base
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , exceptions
                     , formatting
                     , lens
                     , mtl
                     , resourcet
                     , text
                     , text-format
                     , utility-ht
                     , universum
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/films-converter
